--- a/www/criar-conta.html
+++ b/www/criar-conta.html
@@ -205,7 +205,7 @@
                             <!-- Navigation Controls -->
                             <div class="d-flex justify-content-between align-items-center mt-4">
                                 <!-- Botão Voltar -->
-                                <button type="button" class="btn btn-outline-secondary" dmx-show="etapas.value > 0" dmx-on:click="etapas.setValue(etapas.value - 1)">
+                                <button type="button" class="btn btn-warning" dmx-show="etapas.value &gt; 0" dmx-on:click="etapas.setValue(etapas.value - 1)">
                                     <i class="bi bi-arrow-left me-1"></i>
                                     Voltar
                                 </button>
