--- a/www/criar-conta.html
+++ b/www/criar-conta.html
@@ -15,7 +15,7 @@
         <div class="col-12 col-lg-6">
             <div class="d-flex flex-column h-100 justify-content-center align-items-center">
                 <header class="mb-4">
-                    <img src="assets/images/spacefeed-black.png" class="img-fluid" width="240" alt="Spacefeed Logo">
+                    <img src="assets/images/spacefeed-black.png" class="img-fluid" width="240" alt="Spacefeed Logo" dmx-on:click="navegacao.goto('/',true)">
                 </header>
                 <main class="w-100 d-flex justify-content-center mb-4">
                     <div class="col-12 col-sm-11 col-md-10 col-lg-12 col-xl-11 col-xxl-10 p-4 p-md-5 p-lg-6 glass-background-solid">
