--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -22,17 +22,21 @@
     <link rel="stylesheet" href="../dmxAppConnect/dmxPreloader/dmxPreloader.css" />
     <script src="../dmxAppConnect/dmxPreloader/dmxPreloader.js" defer></script>
     <link rel="stylesheet" href="../dmxAppConnect/dmxBootstrap5TableGenerator/dmxBootstrap5TableGenerator.css" />
-<script src="../dmxAppConnect/dmxBootstrap5Modal/dmxBootstrap5Modal.js" defer></script>
+    <script src="../dmxAppConnect/dmxBootstrap5Modal/dmxBootstrap5Modal.js" defer></script>
+    <link rel="stylesheet" href="../dmxAppConnect/dmxValidator/dmxValidator.css" />
+    <script src="../dmxAppConnect/dmxValidator/dmxValidator.js" defer></script>
+<script src="../dmxAppConnect/dmxDataTraversal/dmxDataTraversal.js" defer></script>
 </head>
 
 <body is="dmx-app" id="backoffice" class="bg-backoffice">
+
 
 
     <dmx-preloader id="carregamento" spinner="wave" color="#ffc107"></dmx-preloader>
 
 
     <div is="dmx-browser" id="navegacao"></div>
-    <dmx-notifications id="notificacoes"></dmx-notifications>
+    <dmx-notifications id="notificacoes" position="bottom" align="center"></dmx-notifications>
     <script is="dmx-flow" id="redirect_deslogado" type="text/dmx-flow" autorun="true">{
   condition: {
     outputType: "boolean",
@@ -44,16 +48,18 @@
     }
   }
 }</script>
-    <dmx-local-manager id="idUsuario"></dmx-local-manager>
+    <dmx-serverconnect id="selecionar_empresa" noload="true" url="http://localhost:3000/api/selecionar-empresa" site="backendMarte"></dmx-serverconnect><dmx-local-manager id="idUsuario"></dmx-local-manager>
     <dmx-serverconnect id="usuario" url="http://localhost:3000/api/dados-usuario" site="backendMarte" dmx-param:id_usuario_logado="idUsuario.data.id"></dmx-serverconnect>
     <dmx-serverconnect id="listar_empresas" url="http://localhost:3000/api/listar-empresas" site="backendMarte" dmx-param:id_usuario_logado="idUsuario.data.id"></dmx-serverconnect>
     <div class="container-fluid">
         <div class="row border-top border-bottom border-dark-subtitle bg-white py-3">
             <div class="col-1 align-self-center text-center"><a href="/in/security/" internal="true" class="me-2"><img src="../assets/images/logo_fundo%20branco.png" class="img-fluid" width="48"></a></div>
             <div class="col align-self-center">
-                <div class="d-flex flex-row justify-content-start gap-2 align-items-center"><select id="select1" class="form-select select-border" dmx-bind:options="listar_empresas.data.query_empresas" optiontext="nome_polo" optionvalue="id_empresa">
+                <div class="d-flex flex-row justify-content-start gap-2 align-items-center"><select id="id_empresa" class="form-select select-border" dmx-bind:options="listar_empresas.data.query_empresas" optiontext="nome_polo" optionvalue="id_empresa" name="id_empresa" dmx-bind:value="usuario.data.query[0].empresa_selecionada">
                         <option selected="" value="">Mudar de empresa</option>
-                    </select><button id="btn1" class="btn btn-primary"><i class="fas fa-plus fa-sm"></i><br></button></div>
+                    </select><button id="btn1" class="btn btn-primary" dmx-on:click="selecionar_empresa.load({id_usuario: idUsuario.data.id, id_empresa: id_empresa.selectedValue});navegacao.reload()"><i class="fas fa-plus fa-sm"></i><br></button>
+                    <button id="btn2" class="btn btn-dark" dmx-on:click="navegacao.reload()">Atualizar</button>
+                </div>
 
 
             </div>
