Inicio pagina de colaborador, add link de acesso ao menu no layout.

--- a/www/interno/colaborador.html
+++ b/www/interno/colaborador.html
@@ -1,8 +1,55 @@
-<!-- Wappler include head-page="backoffice.html" is="dmx-app" id="colaborador" appConnect="local" bootstrap5="local" capacitor="local" -->
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12 p-4 rounded-4 bg-white">
-            <h1 class="m-0">Colaborador</h1>
+<!-- Wappler include head-page="backoffice.html" is="dmx-app" id="colaborador" appConnect="local" bootstrap5="local" capacitor="local" components="{dmxBootstrap5Modal:{},dmxValidator:{}}" -->
+
+<div class="modal" id="modal_criar" is="dmx-bs5-modal" tabindex="-1" nocloseonclick="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Criar colaborador</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body p-4">
+                <form id="form_criar_colaborador">
+
+                    <div class="row">
+                        <div class="col">
+                            <div class="form-group mb-3"> <label for="nome_completo" class="form-label">Nome Completo</label>
+                                <input type="text" class="form-control" id="nome_completo" name="nome_completo" aria-describedby="input1_help" required="" data-msg-required="Este é um campo obrigatório.">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group mb-3"> <label for="nome_tratamento" class="form-label">Nome de Tratamento</label>
+                                <input type="text" class="form-control" id="nome_tratamento" name="nome_tratamento" aria-describedby="input1_help1" required="" data-msg-required="Este é um campo obrigatório.">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group mb-3"> <label for="email" class="form-label">E-mail</label>
+                        <input type="email" class="form-control" id="email" name="email" aria-describedby="input3_help" required="" data-msg-required="Este é um campo obrigatório." data-rule-email="" data-msg-email="Insira um e-mal válido!">
+                    </div><input id="id_empresa_atual" name="id_empresa_atual" type="hidden" class="form-control" dmx-bind:value="usuario.data.query[0].empresa_selecionada">
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary" dmx-on:click="form_criar_colaborador.submit()">Cadastrar</button>
+            </div>
         </div>
+    </div>
+</div>
+<div class="container-fluid mt-4 px-3 py-2">
+    <div class="row align-items-center">
+        <div class="col">
+            <div class="d-flex flex-column align-items-start gap-1">
+                <h5 class="m-0">Colaboradores</h5>
+                <h6 class="m-0 breadcrumb-interno">Home - Colaborador - Gerenciar Colaboradores</h6>
+            </div>
+        </div>
+        <div class="col">
+            <div class="d-flex align-items-center gap-2 justify-content-end"><button id="btn1" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal_criar">Adicionar</button></div>
+
+        </div>
+    </div>
+</div>
+<div class="container-fluid mt-3 py-2">
+    <div class="row border border-light-subtle py-3 px-2 rounded-3 m-0 bg-white">
+        <div class="col"></div>
     </div>
 </div>
