--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -25,7 +25,7 @@
     <script src="../dmxAppConnect/dmxBootstrap5Modal/dmxBootstrap5Modal.js" defer></script>
     <link rel="stylesheet" href="../dmxAppConnect/dmxValidator/dmxValidator.css" />
     <script src="../dmxAppConnect/dmxValidator/dmxValidator.js" defer></script>
-<script src="../dmxAppConnect/dmxDataTraversal/dmxDataTraversal.js" defer></script>
+    <script src="../dmxAppConnect/dmxDataTraversal/dmxDataTraversal.js" defer></script>
 </head>
 
 <body is="dmx-app" id="backoffice" class="bg-backoffice">
@@ -64,8 +64,9 @@
 
             </div>
             <div class="col align-self-center">
-                <div class="d-flex justify-content-end align-items-center gap-4">
+                <div class="d-flex justify-content-end align-items-center gap-5">
 
+                    <i class="far fa-life-ring fa-lg"></i>
                     <i class="far fa-bell fa-lg m"></i>
                     <div class="dropdown profile-menu">
                         <button id="dropdown5" class="btn dropdown-toggle btn-sm" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -90,9 +91,12 @@
         </div>
         <div class="row h-100">
             <div class="col-1 text-center py-4 px-3">
-                <h6 class="text-center mb-3 mt-3 side-menu-title">Tools</h6>
-                <div class="d-flex justify-content-center align-items-center"><a href="/in/security/empresa" class="btn text-center w-100 py-3 btn-secondary" internal="true"><i class="fas fa-home"></i>
+                <h6 class="text-center mb-3 mt-3 side-menu-title">Ferramentas</h6>
+                <div class="d-flex justify-content-center align-items-center mb-3"><a href="/in/security/empresa" class="btn text-center w-100 py-3 btn-secondary" internal="true"><i class="fas fa-home"></i>
                         <div class="side-menu-link">Empresa</div>
+                    </a></div>
+                <div class="d-flex justify-content-center align-items-center"><a href="/in/security/colaborador" class="btn text-center w-100 py-3 btn-secondary" internal="true"><i class="fas fa-user-friends"></i>
+                        <div class="side-menu-link">Colaborador</div>
                     </a></div>
 
             </div>
