Ajuste de centralização de container sem scroll na pagina de login.

--- a/www/home.html
+++ b/www/home.html
@@ -14,8 +14,8 @@
   }
 }</script>
 <dmx-local-manager id="id_usuario"></dmx-local-manager>
-<div class="container-fluid vh-100 p-5">
-    <div class="row h-100">
+<div class="container-fluid p-5 h-100">
+    <div class="row h-100 align-items-center">
         <!-- Coluna Esquerda (oculta em tablets e móveis) -->
         <div class="col-lg-6 d-none d-lg-block">
             <div class="d-flex h-100 justify-content-center align-items-center">
@@ -26,7 +26,7 @@
         </div>
 
         <!-- Coluna Direita (formulário) - mais larga em desktop -->
-        <div class="col-12 col-lg-6">
+        <div class="col-12 col-lg-6 h-100">
             <div class="d-flex flex-column h-100 justify-content-center align-items-center">
                 <!-- Logo -->
                 <header class="mb-4">
